[gd_scene load_steps=7 format=3 uid="uid://fhvgf2krdhll"]

[ext_resource type="Script" path="res://Bricks/bricks.gd" id="1_wixaj"]
[ext_resource type="Texture2D" uid="uid://dtosea21pp2vx" path="res://Assets/Sprites/Brick_Violet.png" id="2_kgxe6"]
[ext_resource type="Texture2D" uid="uid://8xsp2kc7rr5p" path="res://Assets/Sprites/Brick._Blue.png" id="3_222qw"]
[ext_resource type="Texture2D" uid="uid://bmwrkpn0ifvrh" path="res://Assets/Sprites/Brick._Red.png" id="4_n1byw"]
[ext_resource type="Texture2D" uid="uid://bk6qjdwp0aisc" path="res://Assets/Sprites/Brick._Yellow.png" id="5_ceq72"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r5dhj"]
size = Vector2(64, 32)

[node name="Brick_Rect" type="StaticBody2D" groups=["breakable"]]
collision_layer = 3
script = ExtResource("1_wixaj")

[node name="Brick_Violet" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_kgxe6")

[node name="Brick_Blue" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_222qw")

[node name="Brick_Red" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_n1byw")

[node name="Brick_Yellow" type="Sprite2D" parent="."]
texture = ExtResource("5_ceq72")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_r5dhj")
